[tool.poetry]
name = "darklab-infrastructure"
version = "0.1.0"
description = ""
authors = ["dd84ai <dd84ai@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "darklab_infrastructure"}]

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^6.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
